# sf-search

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  cspell.json  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.yml
services/main/: .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  target.geojson
services/main/main_service/: __main__.py  config.py  geo.py  logging_config.py  pano_retrieval.py  pipeline_manager.py  service_loop.py
services/main/main_service/db/: initialize_engine.py
services/main/main_service/discovery/: __init__.py  __main__.py
services/main/main_service/downloader/: __init__.py  __main__.py  nats_source.py  requeue.py  runner.py  storage.py  streetview_client.py
services/main/main_service/embedding/: __init__.py  __main__.py  model.py  nats_source.py  qdrant_store.py  query_ui.py  runner.py  smoke.py  vector_store.py  vector_store_factory.py
services/main/main_service/ingestion/: boundary_loader.py  coverage_client.py  discovery.py  download_queue.py  types.py
services/main/main_service/monitoring/: __init__.py  __main__.py  snapshot.py
services/main/main_service/observability/: __init__.py  progress.py  telemetry.py
services/main/main_service/ops/: __init__.py  __main__.py  requeue.py  vector_backfill.py
services/main/main_service/processing/: __main__.py  nats_source.py  runner.py  storage.py  tiling.py  view_rendering.py
services/main/main_service/tools/: count_boundary_panos.py  random_pano_downloader.py
services/main/tests/: test_config.py  test_geo.py  test_imports.py  test_logging_config.py  test_models.py  test_service_loop.py  test_tiling.py
services/main/tests/db/: test_discovery_models.py  test_discovery_service.py  test_initialize_engine.py  (+2 more)
(+152 files in other folders)
