[project]
name = "main-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mercantile>=1.2.1",
    "pydantic-settings>=2.12.0",
    "shapely>=2.1.2",
    "shared",
    "streetlevel>=0.12.4",
]

[tool.uv.sources]
shared = { path = "../shared", editable=true}
