[project]
name = "main-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mercantile>=1.2.1",
    "peewee>=3.18.3",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "shapely>=2.1.2",
    "shared",
    "sqlalchemy>=2.0.45",
    "streetlevel>=0.12.4",
]

[tool.uv.sources]
shared = { path = "../shared", editable=true}
