[project]
name = "main-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mercantile>=1.2.1",
    "peewee>=3.18.3",
    "nats-py>=2.10.0",
    "opencv-python-headless>=4.12.0.88",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "py360convert>=1.0.4",
    "pydantic-settings>=2.12.0",
    "psycopg[binary]>=3.2.13",
    "shapely>=2.1.2",
    "shared",
    "sqlalchemy>=2.0.45",
    "streetlevel>=0.12.4",
]

[tool.uv.sources]
shared = { path = "../shared", editable=true}

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
embedding = [
    "hnswlib>=0.8.0",
    "torch>=2.9.0",
    "transformers>=4.52.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../shared",
]
